# train-test-regime

./: .gitignore  README.md  choose-responses.py  group-eval.py  main.py  pyproject.toml  rank-responses.py  workflow.tldr
data/: llama3-loan-mortgage-ranked-responses.csv
experiments/: config_template.yaml  llama3-qlora-mortgage-k20_results.csv  llama3-qlora-mortgage-k30_results.csv  llama3-qlora-mortgage-k40_results.csv  llama3-qlora-mortgage-k50_results.csv  llama3-qlora-mortgage-p0.95_results.csv  llama3-qlora-mortgage-p0.9_results.csv  llama3-qlora-mortgage-p1.0_results.csv  llama3.2_base_model.yaml
experiments/experiment_top_k/: config_1.yaml  config_2.yaml  config_3.yaml  config_4.yaml
experiments/experiment_top_k/new/: config_1.yaml  config_2.yaml  config_3.yaml
experiments/experiments_lr/: config_1.yaml  config_2.yaml  config_3.yaml
experiments/experiments_models/: llama3.2_base_model.yaml  qwen2.5-3b_base_model.yaml
experiments/experiments_ppo/: config_1.yaml  config_2.yaml  trial.yaml
experiments/experiments_temperature/: config_1.yaml  config_2.yaml  config_3.yaml  config_4.yaml
experiments/experiments_top_p/: config_1.yaml  config_2.yaml  config_3.yaml
experiments/reward_model/: config_1.yaml  config_2.yaml  config_3.yaml
scripts/: group-train-test-rm.py  group-train.py  lora_unsloth_train.py  ppo.py  ppo1.py  ppo_custom.py  ppo_eval.py  preprocess_dataset.py  reward_model_train.py  test_reward_model.py  unsloth_eval.py
